ref: fix endpoints routes in swagger
